[gd_scene load_steps=5 format=3 uid="uid://h77d8jjupy3t"]

[ext_resource type="Script" path="res://Items/Regen.gd" id="1_vyk86"]
[ext_resource type="Texture2D" uid="uid://boiklo564p5w5" path="res://Tiles/Tile_set_final.png" id="2_1av0g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ori55"]
atlas = ExtResource("2_1av0g")
region = Rect2(98, 66, 16, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxmqs"]

[node name="Regen" type="Node2D"]
position = Vector2(229, 181)
script = ExtResource("1_vyk86")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_ori55")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
z_index = -1
collision_layer = 16
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_hxmqs")
metadata/_edit_lock_ = true

[node name="Regen_view" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = 19.0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
